-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: 17, 21, 25, 26
-
Component/s: hotspot
-
b02
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8374619 | 26.0.1 | Roland Westrelin | P3 | Resolved | Fixed | b01 |
| JDK-8373395 | 26 | Roland Westrelin | P3 | Resolved | Fixed | b30 |
- backported by
-
JDK-8373395 C2: more crashes in compiled code because of dependency on removed range check CastIIs
-
- Resolved
-
-
JDK-8374619 C2: more crashes in compiled code because of dependency on removed range check CastIIs
-
- Resolved
-
- blocks
-
JDK-8373359 C2: BoolNode::Value_cmpu_and_mask() should look through cast nodes
-
- Open
-
- relates to
-
JDK-8332827 [REDO] C2: crash in compiled code because of dependency on removed range check CastIIs
-
- Resolved
-
- links to
-
Commit(jdk26)
openjdk/jdk/d8a1c1d0
-
Commit(master)
openjdk/jdk/00068a80
-
Review(jdk26)
openjdk/jdk/28892
-
Review(master)
openjdk/jdk/24575